// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component snapshots default state renders Board container without boardId 1`] = `
<div
  className="sc-gzVnrw eSJPPX ant-layout"
>
  <div
    className="sc-htoDjs hRouSj ant-layout-header"
  >
    <div
      className="sc-EHOje heLVgc"
    >
      <div
        className="sc-bZQynM fMhQSn ant-select ant-select-enabled"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
        style={undefined}
      >
        <div
          aria-autocomplete="list"
          aria-expanded={false}
          aria-haspopup="true"
          className="ant-select-selection
                    ant-select-selection--single"
          onKeyDown={[Function]}
          role="combobox"
          tabIndex={0}
        >
          <div
            className="ant-select-selection__rendered"
          >
            <div
              className="ant-select-selection-selected-value"
              style={
                Object {
                  "display": "block",
                  "opacity": 1,
                }
              }
              title="Select board"
            >
              Select board
            </div>
          </div>
          <span
            className="ant-select-arrow"
            onClick={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="unselectable"
          >
            <b />
          </span>
        </div>
      </div>
      <form
        className="sc-bxivhb iGVlRn"
        onSubmit={[Function]}
      >
        <input
          className="sc-ifAKCX cMqBtW"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Add a board"
          value=""
        />
      </form>
    </div>
  </div>
  <Board
    boardId={null}
  />
</div>
`;

exports[`App component snapshots with boardId in state renders Board container with boardId 1`] = `
<div
  className="sc-gzVnrw eSJPPX ant-layout"
>
  <div
    className="sc-htoDjs hRouSj ant-layout-header"
  >
    <div
      className="sc-EHOje heLVgc"
    >
      <div
        className="sc-bZQynM fMhQSn ant-select ant-select-enabled"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
        style={undefined}
      >
        <div
          aria-autocomplete="list"
          aria-expanded={false}
          aria-haspopup="true"
          className="ant-select-selection
                    ant-select-selection--single"
          onKeyDown={[Function]}
          role="combobox"
          tabIndex={0}
        >
          <div
            className="ant-select-selection__rendered"
          >
            <div
              className="ant-select-selection-selected-value"
              style={
                Object {
                  "display": "block",
                  "opacity": 1,
                }
              }
              title="test"
            >
              test
            </div>
          </div>
          <span
            className="ant-select-arrow"
            onClick={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="unselectable"
          >
            <b />
          </span>
        </div>
      </div>
      <form
        className="sc-bxivhb iGVlRn"
        onSubmit={[Function]}
      >
        <input
          className="sc-ifAKCX cMqBtW"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Add a board"
          value=""
        />
      </form>
    </div>
  </div>
  <Board
    boardId={1}
  />
</div>
`;
